--- a/src/index.css
+++ b/src/index.css
@@ -314,3 +314,16 @@ body {
   margin-right: 0 !important;
   width: auto !important;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.scrollbar-none {
+  scrollbar-width: none;
+}
+
+.scrollbar-none::-webkit-scrollbar-thumb {
+  background: transparent;
+}
